--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,55 @@
 
+/* regole generali */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+
 #app{
     background: linear-gradient(180deg, rgb(0,150,136) 15%, rgb(220,219,209) 15%);
-    width: 100vw;
-    height: 100vh;
+
 }
 #container{
     margin: auto;
-    padding-top: 50px;
+    padding: 50px 0;
     max-width: 1200px;
     height: 800px;
 }
+
+/* main */
+
 main{
     width: 70%;
-}
-aside{
-    width: 30%;
+    background-color: white;
+    border-left: 1px grey solid;
 }
 
+main nav.navbar{
+    border-bottom: 1px gray solid;
+}
+
+/* aside bar */
+aside{
+    width: 30%;
+    background-color: white;
+    
+}
+
+aside nav{
+    width: 100%;
+}
+
+aside nav.navbar{
+    max-height: 100%;
+}
+
+aside div.card{
+    width: 100%;
+    max-height: 100%;
+}
+
+.active-card{
+    background-color: rgb(233,235,235);
+}
