--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,14 @@ aside nav.navbar{
     max-height: 100%;
 }
 
+/* aside search bar */
+#search-bar-container{
+    width: 100%;
+}
+
+
+/* aside cards list */
+
 aside div.card{
     width: 100%;
     max-height: 100%;
