--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,19 @@ aside nav.navbar{
 div#user-cards-container{
     overflow-y : scroll;
 }
+
+div#user-cards-container li{
+    display: flex;
+    align-items: center;
+}
 aside div.card{
     width: 100%;
     max-height: 100%;
+}
+
+aside div.card img{
+    width: 100px;
+    height: 100px;
 }
 
 .active-card{
