--- a/css/style.css
+++ b/css/style.css
@@ -18,31 +18,7 @@
     height: 800px;
 }
 
-/* main */
 
-main{
-    width: 70%;
-    background-color: white;
-    border-left: 1px grey solid;
-}
-
-main nav.navbar{
-    height: 10%;
-}
-
-/* message tab */
-#message-tab{
-    height: 90%;
-    background-color: rgb(229,221,212);
-    border: 1px solid black;
-}
-.user-message{
-    background-color: greenyellow;
-}
-
-.friend-message{
-    background-color: white;
-}
 
 
 /* aside bar */
@@ -115,3 +91,48 @@ aside div.card img{
 }
 
 
+/* main */
+
+main{
+    width: 70%;
+    background-color: white;
+    border-left: 1px grey solid;
+}
+
+main nav.navbar{
+    height: 10%;
+}
+
+/* message tab */
+#message-tab{
+    height: 90%;
+    background-color: rgb(229,221,212);
+    border: 1px solid black;
+    position: relative;
+}
+
+#message-bar{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(243,238,234);
+    padding: 5px;
+}
+#message-bar input{
+    width: 80%;
+    border: none;
+    border-radius: 25px;
+    padding: 5px;
+}
+#message-bar i{
+    width: 10%;
+    font-size: 20px;
+    text-align: center;
+}
+.user-message{
+    background-color: greenyellow;
+}
+
+.friend-message{
+    background-color: white;
+}
