--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,23 @@ main nav.navbar{
     border: 1px solid black;
     position: relative;
 }
+.message-box{
+    width: 250px;
+    min-height: 60px;
+    border-radius: 50px;
+    padding: 5px 10px;
+    margin: 15px;
+}
+
+
+.sent-messages{
+    background-color: rgb(213,249,186);
+}
+
+.received-messages{
+    background-color: white;
+}
+
 
 #message-bar{
     position: absolute;
