--- a/css/style.css
+++ b/css/style.css
@@ -112,21 +112,32 @@ main nav.navbar{
 }
 .message-box{
     width: 250px;
-    min-height: 60px;
+    min-height: 30px;
     border-radius: 50px;
-    padding: 5px 10px;
+    padding: 10px 15px;
     margin: 15px;
+    position: relative;
 }
 
 
 .sent-messages{
     background-color: rgb(213,249,186);
+    margin-left: 550px;
 }
 
 .received-messages{
     background-color: white;
 }
 
+.message-time{
+    font-size: 10px;
+    color: grey;
+    position: absolute;
+    margin-top:15px ;
+    bottom: 0;
+    right: 33px;
+    
+}
 
 #message-bar{
     position: absolute;
