--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ aside nav.navbar{
     max-height: 100%;
     border-bottom: 1px solid gray;
 }
+/* user profile navbar  */
+#user-profile-navbar{
+    height: 100%;
+}
+#user-profile-navbar img{
+    width: 15%;
+}
 
 /* notification bar */
 #notify-bar{
@@ -111,6 +118,7 @@ main nav.navbar{
     border: 1px solid black;
     position: relative;
     overflow-y: auto;
+    padding-bottom: 40px;
 }
 .message-box{
     width: 250px;
